--- a/RestDemoTest/pom.xml
+++ b/RestDemoTest/pom.xml
@@ -42,6 +42,11 @@
             <version>2.7.9</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
