--- a/RestDemoTest/pom.xml
+++ b/RestDemoTest/pom.xml
@@ -67,6 +67,37 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
+
+            <plugin>
+                <groupId>au.com.dius.pact.provider</groupId>
+                <artifactId>maven</artifactId>
+                <version>4.1.11</version>
+
+                <configuration>
+                    <serviceProviders>
+                        <!-- You can define as many as you need, but each must have a unique name -->
+                        <serviceProvider>
+                            <name>RestDemo</name>
+                            <!-- All the provider properties are optional, and have sensible defaults (shown below) -->
+                            <protocol>http</protocol>
+                            <host>localhost</host>
+                            <port>80</port>
+                            <path>/restdemo</path>
+                            <stateChangeUrl>http://localhost:81/restdemotest/setup</stateChangeUrl>
+                            <stateChangeTeardown>true</stateChangeTeardown>
+                            <pactFileDirectory>../usermanager/pacts</pactFileDirectory>
+                            <consumers>
+                                <!-- Again, you can define as many consumers for each provider as you need, but each must have a unique name -->
+                                <consumer>
+                                    <name>usermanager</name>
+                                    <!--  currently supports a file path using pactSource or a URL using pactUrl -->
+                                    <pactSource>../usermanager/pacts/usermanager-restdemo.json</pactSource>
+                                </consumer>
+                            </consumers>
+                        </serviceProvider>
+                    </serviceProviders>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
